# FinanceTooling

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: quality.yml
config/: account_rules.yaml  budget_targets.yaml  category_overrides.yaml  category_rules.yaml  project_overrides.yaml  project_rules.yaml  transaction_overrides.yaml
docs/: README.md  categorization_review_candidate_workflow.md  categorization_review_workflow.md  category_id_model.md  category_rules_review_workflow.md  decrypted_vault_backup.md  hsbc_failed_statement_diagnostics_2026-02-28_fxfix.md  hsbc_reconciliation_root_cause_triage_2026-02-28.md  hsbc_remaining_fail_note_2019-11-27_2026-03-01.md  metrics_commit_log.csv  metrics_commit_log_by_bank.csv  next_agent_cli_api_split_plan.md  next_agent_incremental_ingestion_stability_plan.md  perf-baseline.md  planning_stage_integration_plan.md  roadmap.md  taxonomy_guide.md  taxonomy_spec.md  todo.md  transaction_model_improvement_plan.md  workflow_full_corpus.puml  workflow_incremental_ingestion.puml  workflow_spec.md
docs/diagrams/: categorization_review_hitl_flow.puml  categorization_review_import_guardrails.puml
planning/household_finance_360/: 00_household_profile.md  01_accounts_inventory.csv  02_monthly_cashflow_budget.csv  03_net_worth_snapshot.csv  04_goal_plan.yaml  05_investment_policy.md  06_monitoring_checklist.md  07_decision_log.md  08_annual_review_template.md  09_planning_inputs.yaml  10_scenario_matrix.csv  11_sizing_guide.md  12_sizing_output.json  13_doe_ranges.yaml  14_doe_results.csv  15_hypothesis_playground.html  README.md  workflow.md
scripts/: backup_decrypted_finance_vault.sh  render_docs_diagrams.sh
src/: LBP_API.py  import_statements.py
src/finance_tooling/: __init__.py  __main__.py  account_inference.py  backup.py  canonical.py  cashflow.py  categorization_audit.py  categorization_review.py  category_id_migrate_live.py  category_id_migration_audit.py  category_normalization.py  classify.py  cli_aliases.py  completeness.py  config.py  core.py  dashboard.py  fx.py  household_healthcheck.py  metrics.py  metrics_log.py  migrate_category_overrides.py  migrate_transaction_ids.py  models.py  parser.py  perf_check.py  pipeline.py  planning.py  planning_dashboard.py  projecting.py  review_common.py  review_export.py  review_import.py  review_state.py  scanner.py  source_inventory.py  store.py  transaction_overrides.py  workflow_status.py
src/finance_tooling/audits/: __init__.py  categorization.py  category_id_migration.py
src/finance_tooling/categorization/: __init__.py  account_inference.py  category_normalization.py  classify.py  projecting.py  transaction_overrides.py
src/finance_tooling/commands/: __init__.py  common.py  ingest.py  metrics_log_update.py  migrate_category_overrides_to_rules.py  migrate_transaction_ids.py  plan_hypothesis_page.py  plan_savings.py  plan_savings_doe.py  planning.py  review_export.py  review_helper.py  review_import.py  transform.py  update.py  workflow_status.py
src/finance_tooling/core/: __init__.py  backup.py  config.py  extract.py  fx.py  models.py  scanner.py  semantic_resolution.py  semantics.py  source_inventory.py  store.py
tests/: test_account_inference.py  test_backup.py  test_boursobank_fixtures.py  test_budgeting.py  test_canonical.py  test_cashflow.py  test_categorization_audit.py  test_categorization_review.py  test_category_carry_forward.py  test_category_id_migrate_live.py  test_category_id_migration_audit.py  test_category_normalization.py  test_classify.py  test_cli_aliases.py  test_cli_dispatch.py  test_command_entrypoints.py  test_completeness.py  test_config.py  test_dashboard.py  test_enrichment.py  test_fx.py  test_healthcheck.py  test_household_healthcheck.py  test_hsbc_csv_import.py  test_hsbc_fixtures.py  test_ingest.py  test_main.py  test_metrics.py  test_metrics_log.py  test_migrate_transaction_ids.py  test_parser.py  test_parser_base.py  test_parser_conformance.py  test_perf_check.py  test_pipeline.py  test_plan_savings_cli.py  test_plan_savings_doe_cli.py  test_planning.py  test_planning_dashboard.py  test_planning_doe.py  (+12 more)
(+87 files in other folders)
