[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finance-tooling"
version = "0.1.0"
description = "Tooling for monitoring and analyzing personal finances."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "FinanceTooling Contributors" }]
dependencies = [
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "pyarrow>=18.0.0",
  "pdfplumber>=0.11.0",
  "pyyaml>=6.0.2",
  "requests>=2.32.0",
  "tqdm>=4.67.0",
]

[project.scripts]
ingest = "finance_tooling.commands.ingest:main"
transform = "finance_tooling.commands.transform:main"
update = "finance_tooling.commands.update:main"
review-export = "finance_tooling.commands.review_export:main"
review-import = "finance_tooling.commands.review_import:main"
workflow-status = "finance_tooling.commands.workflow_status:main"

[dependency-groups]
dev = [
  "pre-commit>=4.0.0",
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.13.0",
  "ty>=0.0.1a17",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
